--- a/scss/styleguide/grid.scss
+++ b/scss/styleguide/grid.scss
@@ -1,5 +1,5 @@
-@import "../components/layout";
-@import "../components/grid";
+@import "./components/layout";
+@import "./components/grid";
 
 html {
   box-sizing: border-box;
