--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -30,11 +30,12 @@
   padding-top: 0;
   padding-bottom: 0;
   width: 100%;
+  margin: 0;
 }
 
 .block-hero-unit.size-large .ucb-hero-unit-content {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 300px;
+  padding-bottom: 300px;
 }
 
 .block-hero-unit.size-small .ucb-hero-unit-content {
