--- a/templates/block/block--video-hero-unit.html.twig
+++ b/templates/block/block--video-hero-unit.html.twig
@@ -76,10 +76,34 @@
 {% endif %}
 
 <div class="ucb-hero-outer-wrapper">
-	<div{{attributes.addClass(classes)}}>
+		{# Block/Title/Icon Styles #}
+	{% set blockStyles = [
+	content.field_bs_background_style|render|striptags|trim,
+	content.field_bs_content_font_scale|render|striptags|trim,
+	content.field_bs_icon_position|render|striptags|trim,
+	content.field_bs_heading_alignment|render|striptags|trim,
+	content.field_bs_title_font_scale|render|striptags|trim,
+	''
+] %}
+
+	{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
+	{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
+	{% set headingTag = content.field_bs_heading|render|striptags|trim %}
+	{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
+
+	<div{{attributes.addClass(classes,blockStyles)}}>
 		{{ title_prefix }}
 		{% if label %}
-			<h2{{title_attributes}}>{{ label }}</h2>
+			<div class="block-title {{ headingStyle }}">
+				<{{headingTag}}{{title_attributes}}>
+					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+						{{ content.field_bs_icon }}
+					</span>
+					<span class="block-title-text">
+						{{ label }}
+					</span>
+				</{{headingTag}}>
+			</div>
 		{% endif %}
 		{{ title_suffix }}
 		{% block content %}
@@ -108,7 +132,8 @@
 							<div class="col-12 col-md-6"></div>
 						{% endif %}
 						<div class="col ucb-hero-unit-links">
-							{{ content|without('field_links') }}
+							{{ content.field_headline }}
+							{{ content.field_text }}
 							{# Render links here #}
 							{% for item in content['#block_content'].field_links.value %}
 								{{ link(item.title, item.uri, {'class': ['button', linkColor]} ) }}
