--- a/templates/block/block--video-reveal.html.twig
+++ b/templates/block/block--video-reveal.html.twig
@@ -1,24 +1,19 @@
 {#
 /**
- * @file
- * Theme to implement the video reveal block
- *
- * Created by Joshua Nicholson on 08/09/22
-*
+ * @file Contains the template to display the Video Reveal block type.
+ */
 #}
 
 {{ attach_library('boulder_base/ucb-video-reveal') }}
 
-{%
-  set classes = [
+{% set classes = [
     'ucb-video-reveal',
     'block',
     'block-' ~ configuration.provider|clean_class,
     'block-' ~ plugin_id|clean_class,
     bundle ? 'block--type-' ~ bundle|clean_class,
     view_mode ? 'block--view-mode-' ~ view_mode|clean_class
-  ]
-%}
+  ] %}
 
 {% set blockId = content['#block_content'].id() %}
 {% if content['#block_content'].field_video_reveal_video.entity.field_media_oembed_video is defined %}
@@ -42,11 +37,11 @@
 {% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
 
 {% block content %}
-  <div{{attributes.addClass(classes,blockStyles)}}>
+  <div{{attributes.addClass(classes, blockStyles)}}>
     {{ title_prefix }}
     {% if label %}
       <div class="block-title {{ headingStyle }}">
-        <{{ headingTag }}{{title_attributes}}>
+        <{{ headingTag }}{{ title_attributes }}>
           <span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
             {{ content.field_bs_icon }}
           </span>
@@ -63,16 +58,16 @@
             <i class="fa-solid fa-circle-xmark ucb-video-reveal-close-button"></i>
           </button>
         </div>
-		    <div class="ucb-video-reveal-video-wrapper" id="ucb-video-reveal-video-wrapper-{{blockId}}">
+        <div class="ucb-video-reveal-video-wrapper" id="ucb-video-reveal-video-wrapper-{{ blockId }}">
           <script type="text/javascript">
-            window.addEventListener('load', () => enableVideoReveal('{{ videoURL }}', 'ucb-video-reveal-video-wrapper-{{blockId}}'));
+            window.addEventListener('load', () => enableVideoReveal('{{ videoURL }}', 'ucb-video-reveal-video-wrapper-{{ blockId }}'));
           </script>
         </div>
         <div role="button" aria-label="Play video" class="ucb-video-reveal-controls">
           <span class="ucb-video-reveal-icon">
             <i class="fa-solid fa-circle-play"></i>
           </span>
-          <span class="ucb-video-reveal-text">{{ content.field_video_reveal_text_overlay|render}}</span>
+          <span class="ucb-video-reveal-text">{{ content.field_video_reveal_text_overlay|render }}</span>
         </div>
         <div class="ucb-video-reveal-image">
           {{ content.field_video_reveal_image|render }}
