Fixed style for links in Content Grid Card

--- a/css/block/content-grid.css
+++ b/css/block/content-grid.css
@@ -49,6 +49,14 @@
   width: 100%;
 }
 
+/* Override for Card links color to maintain accessibility (white on blue) */
+.grid-card .grid-text-container a {
+  color: var(--ucb-link);
+}
+.grid-card .grid-text-container a:hover{
+  color: var(--ucb-link-visited);
+}
+
 /* Card Layout CSS */
 .grid-card {
   -webkit-box-shadow: 0 0 10px rgb(0, 0, 0, 10%);
@@ -85,7 +93,6 @@
   width: 100%;
   font-size: 100%
 }
-
 
 /*** Offest Grid Layout ***/
 .grid-image-container-large .grid-fill {
