Removes link decoration for Content Grid links

--- a/css/block/content-grid.css
+++ b/css/block/content-grid.css
@@ -52,9 +52,11 @@
 /* Override for Card links color to maintain accessibility (white on blue) */
 .grid-card .grid-text-container a {
   color: var(--ucb-link);
+  text-decoration: none;
 }
 .grid-card .grid-text-container a:hover{
   color: var(--ucb-link-visited);
+  text-decoration: none;
 }
 
 /* Card Layout CSS */
