--- a/templates/field/field--field-social-media-email-link.html.twig
+++ b/templates/field/field--field-social-media-email-link.html.twig
@@ -1,22 +1,17 @@
 {#
 /**
- * Theme layout to email icon for social media icon blocks
- * Created by Jacob Korf on 2/15/2022
+ * @file Contains the template to display the Social Media Email Link field of a Social Media Icons block.
  */
 #}
 
-{% for item in items %}
-	<ul class = "email-ul">
-		<li>
-			<a href="mailto:{{ item.content }}" title="Email" alt="Email">
-				<span class="icon-div">
-					<span class="sr-only">Email</span>
-					<span class="icon-bg icon-bg-email">
-						<i class="fas fa-envelope icon-foreground"></i>
-					</span>
-					<span class="vertical-icon-span">Email</span>
-				</span>
-			</a>
-		</li>
-	</ul>
-{% endfor %}
+{% import '@boulder_base/navigation/menu--social-media-menu.html.twig' as socialMediaMenu %}
+
+{% if items %}
+  <ul>
+    {% for item in items %}
+      <li>
+        {{ socialMediaMenu.link('Email', 'mailto:' ~ item|render, 'fa-solid fa-envelope', 'email') }}
+      </li>
+    {% endfor %}
+  </ul>
+{% endif %}
