--- a/templates/navigation/menu--social-media-menu.html.twig
+++ b/templates/navigation/menu--social-media-menu.html.twig
@@ -40,33 +40,33 @@
       {% set uri = (item.content ? item.content['#url'].uri : item.url.uri)|trim %}
       {% set hostname = '' %}
       {% if uri matches '/^(http(s)?:)?\\/\\//i' %}
-        {% set hostname = uri|split('/').2|upper %}
+        {% set hostname = uri|split('/').2 %}
       {% endif %}
-      {% if 'FACEBOOK' in hostname %}
+      {% if hostname matches '/facebook\\.com$/i' %}
         {{ _self.link('Facebook', uri, 'fa-brands fa-facebook-f', 'facebook') }}
-      {% elseif 'INSTAGRAM' in hostname %}
+      {% elseif hostname matches '/instagram\\.com$/i' %}
         {{ _self.link('Instagram', uri, 'fa-brands fa-instagram', 'instagram') }}
-      {% elseif 'LINKEDIN' in hostname %}
+      {% elseif hostname matches '/linkedin\\.com$/i' %}
         {{ _self.link('LinkedIn', uri, 'fa-brands fa-linkedin-in', 'linkedin') }}
-      {% elseif 'YOUTUBE' in hostname %}
+      {% elseif hostname matches '/youtube\\.com$/i' %}
         {{ _self.link('YouTube', uri, 'fa-brands fa-youtube', 'youtube') }}
-      {% elseif 'PINTREST' in hostname %}
+      {% elseif hostname matches '/(pintrest\\.com|pin\\.it)$/i' %}
         {{ _self.link('Pintrest', uri, 'fa-brands fa-pinterest-p', 'pintrest') }}
-      {% elseif 'FLICKR' in hostname %}
+      {% elseif hostname matches '/(flickr\\.com|flic\\.kr)$/i' %}
         {{ _self.link('Flickr', uri, 'fa-brands fa-flickr', 'flickr') }}
-      {% elseif 'VIMEO' in hostname %}
+      {% elseif hostname matches '/vimeo\\.com$/i' %}
         {{ _self.link('Vimeo', uri, 'fa-brands fa-vimeo-v', 'vimeo') }}
-      {% elseif 'WORDPRESS' in hostname %}
+      {% elseif hostname matches '/wordpress\\.com$/i' %}
         {{ _self.link('WordPress', uri, 'fa-brands fa-wordpress-simple', 'wordpress') }}
-      {% elseif 'TIKTOK' in hostname %}
+      {% elseif hostname matches '/tiktok\\.com$/i' %}
         {{ _self.link('TikTok', uri, 'fa-brands fa-tiktok', 'tiktok') }}
-      {% elseif 'REDDIT' in hostname %}
+      {% elseif hostname matches '/reddit\\.com$/i' %}
         {{ _self.link('Reddit', uri, 'fa-brands fa-reddit-alien', 'reddit') }}
-      {% elseif 'PATREON' in hostname %}
+      {% elseif hostname matches '/patreon\\.com$/i' %}
         {{ _self.link('Patreon', uri, 'fa-brands fa-patreon', 'patreon') }}
-      {% elseif 'DISCORD' in hostname %}
+      {% elseif hostname matches '/discord\\.(com|gg)$/i' %}
         {{ _self.link('Discord', uri, 'fa-brands fa-discord', 'discord') }}
-      {% elseif 'TWITTER' in hostname or 'X.COM' in hostname  %}
+      {% elseif hostname matches '/(twitter|x)\\.com$/i'  %}
         {{ _self.link('X', uri, 'fa-brands fa-x-twitter', 'twitter') }}
       {% else %}
         {{ _self.link('Link', uri, 'fa-solid fa-up-right-from-square', 'link') }}
