Fix email HTML social media menu

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -229,10 +229,16 @@ td>h3>a{
     font-size: 10px;
 }
 
-.newsletter-social-media-menu .social-media-item{
+.newsletter-social-media-menu li {
     display: inline-block;
     padding: 10px;
+    list-style: none;
 }
+
+.icon-label{
+    display: none;
+}
+
 
 
 @media only screen and (max-width: 500px) {
